# offline_video_vllm

./: .gitignore  LARGE_SPEED_LOG.md  MINI_SPEED_LOG.md  PREPROCESSING_BOTTLENECK_HANDOFF.md  QWEN3_VL_DEFERRED.md  README.md  RENDERER_WORKERS_TUNING.md  SPEED_LOG.md  aggregate_matrix.py  bench_matrix.py  fetch_videos.py  infer.py  load_datasets.py  main.py  pyav_keyframe_backend.py  pyproject.toml  sample.py
upstream_bench/: bench_real_loader.py
